# benchmark_AI4Nieup

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  executive_summary.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: __init__.py  aggregation.py  benchmark.py  catalog.py  cli.py  config.py  evaluation.py  judge_legacy.py  mlflow_utils.py  prompts.py  providers.py  runner.py  runner_legacy.py  scoring.py  utils.py
datasets/: dataset_MASTER_benchmark_LLM.csv
