[project]
name = "ia-pour-tous-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "groq>=0.17.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "mlflow>=2.12.0",
]

[project.scripts]
benchmark = "main:main"
